Fix links stay gray after click on mobile

--- a/src/style/06_components/_hero.scss
+++ b/src/style/06_components/_hero.scss
@@ -85,6 +85,14 @@
         border-top: 10px solid $color5;
       }
     }
+
+    @media (hover: none) {
+      &:hover {
+         .hero__arrow {
+          border-top: 10px solid $color6;
+         }
+      }
+    }
   }
 
   &__arrow {
